--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thelifesavers",
+  "name": "thelifesaverspartners",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -32,6 +32,7 @@
     "framer-motion": "^12.18.1",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
